# MAGE

./: CMakeLists.txt  CMakeSettings.json  Readme.md  build.h.in  license.txt
_depreciated/: PROPERTIESOBJECT.INL  animator.cpp  animator.h  basic.cpp  gmoZone.h  loadingScreen.cpp  loadingScreen.h  objBasic.cpp  objPhysics.h  propertiesObject.h  resourceScene.cpp  serializable.h  textHelpers.cpp  textHelpers.h  uiTextEntry.h
docs/journal/: newObjHierarchy.txt
extlibs/chaiscript/chaiscript/: chaiscript_defines.hpp
extlibs/chaiscript/chaiscript/dispatchkit/: proxy_functions_detail.hpp
include/: taggable.h
include/MAGE/: ChaiAfx.h  Game.h  SfmlAfx.h  StdAfx.h  animator.h  basic.h  box.h  box.inl  clock.h  collisionBox.h  colour.h  constants.h  drawLine.h  drawPoint.h  drawRecipe.h  drawSprite.h  easing.h  gameState.h  gmo.h  gmoResizable.h  gmoZone.h  group.h  helperMacros.h  helpers.h  hook.h  hookableLifetimeObject.h  inputGamePad.h  inputKeyboard.h  inputMouse.h  jukebox.h  line.h  line.inl  massTransformable.h  maths.h  mixer.h  namable.h  objBasic.h  objLight.h  objSpriteless.h  objZone.h  (+48 more)
include/MAGE/audio/: jukebox.h
include/MAGE/core/: CerealAfx.h  Game.h  constants.h  functionStack.h  functionStack.inl  gameState.h  helperMacros.h  hook.h  platform.h  platformDeduction.h  prefabs.h  propertiesObject.h  propertiesObject.inl  scene.h  scene.inl  scriptingEngine.h  serializable.h  serialization.h
include/MAGE/depreciated/: objComposite.h  objTilemap.h  uiMenu.h
include/MAGE/gmo/: gmo.h  gmoResizable.h
include/MAGE/input/: inputMouse.h  inputs.h
include/MAGE/maths/: box.h  box.inl  colour.h  interval.h  line.h  line.inl  maths.h  point.h  point.inl  scheduleTick.h  scheduleTween.h  scheduleWait.h  schedules.h  timer.h  transformable.h  transformableBox.h  transformableLine.h  transformableObject.h
include/MAGE/misc/: helpers.h  namable.h  registry.h  stringHelpers.h  taggable.h
include/MAGE/rendering/: batchRenderer.h  drawBox.h  drawLine.h  drawPoint.h  drawSprite.h  renderChunk.h  renderRecipe.h  renderStates.h  renderable.h  renderer.h  shaders.h  triangle.h  vertex.h  view.h
include/MAGE/resources/: RESOURCECEREAL.INL  resourceCereal.h  resourceFilePath.h  resourceFont.h  resourceScene.h  resourceShader.h  resourceSoundBuffer.h  resourceTexture.h  resources.h
include/MAGE/scripting/: chaiDetours.h  scriptingEngine.h
src/: Game.cpp  animator.cpp  basic.cpp  box.cpp  clock.cpp  collisionBox.cpp  colour.cpp  drawBox.cpp  drawLine.cpp  drawPoint.cpp  drawRecipe.cpp  drawSprite.cpp  drawSprite_animation.cpp  gameState.cpp  gmo.cpp  group.cpp  helpers.cpp  hook.cpp  hookableLifetimeObject.cpp  inputKeyboard.cpp  inputMouse.cpp  inputs.cpp  jukebox.cpp  loadingScreen.cpp  maths.cpp  mixer.cpp  objBasic.cpp  objComposite.cpp  objLight.cpp  objPhysics.cpp  objSpriteless.cpp  objTilemap.cpp  objZone.cpp  platformLinux.cpp  platformUniversal.cpp  platformWindows.cpp  point.cpp  prefabs.cpp  propertiesObject.cpp  registry.cpp  (+47 more)
src/audio/: jukebox.cpp  mixer.cpp
src/core/: Game.cpp  gameState.cpp  hook.cpp  platformUniversal.cpp  prefabs.cpp  propertiesObject.cpp  scene.cpp  scriptingEngine.cpp  scriptingEngine_MAGE.cpp  scriptingEngine_SFML.cpp  serializable.cpp
src/depreciated/: objSpriteless.cpp  uiMenu.cpp  uiSpriteless.cpp
src/gmo/: gmo.cpp  gmoResizable.cpp  gmoZone.cpp
src/input/: inputMouse.cpp  inputs.cpp
src/maths/: colour.cpp  interval.cpp  line.cpp  maths.cpp  scheduleTick.cpp  scheduleTween.cpp  scheduleWait.cpp  schedules.cpp  timer.cpp  transformable.cpp  transformableBox.cpp  transformableLine.cpp  transformableObject.cpp
src/misc/: helpers.cpp  namable.cpp  stringHelpers.cpp  taggable.cpp
src/rendering/: batchRenderer.cpp  drawBox.cpp  drawLine.cpp  drawPoint.cpp  drawSprite.cpp  drawSprite_animation.cpp  renderChunk.cpp  renderRecipe.cpp  renderStates.cpp  renderable.cpp  renderer.cpp  shaders.cpp  triangle.cpp  vertex.cpp  view.cpp
src/resources/: resourceFilePath.cpp  resourceFont.cpp  resourceScene.cpp  resourceScriptRoot.cpp  resourceShader.cpp  resourceSoundBuffer.cpp  resourceTexture.cpp  resources.cpp
src/scripting/: chaiDetours.cpp  scriptingEngine.cpp  scriptingEngine_HOOKS.cpp
